--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
                     <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#awards">Achievements</a></li>
                     <li class="nav-item"><a class="nav-link" href="#publications">Publications</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#certifications">Certifications</a></li>
+                    
                 </ul>
             </div>
         </div>
@@ -58,7 +59,7 @@
                         <h1 class="name">Salim Benhamadi</h1>
                         <div class="title-wrapper">
                             <h2 class="position">Machine Learning Engineer</h2>
-                            <p class="description">Passionate about bringing intelligence to machines and solving real-world problems with AI</p>
+                            <p class="description">My neural networks are like my coffee - deep and complex, with occasional unexpected outputs ☕</p>
                         </div>
                     </div>
                     <div class="social-links">
