--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
             <div class="row mt-5 text-center">
                 <div class="col-md-3 col-sm-6 mb-4">
                     <div class="stat-card">
-                        <h3 class="stat-number" data-value="6">6</h3>
-                        <p>Projects Completed</p>
+                        <h3 class="stat-number" data-value="41">41</h3>
+                        <p>Leetcode Solved</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 mb-4">
