Add Badge Section

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#badges">Badges</a></li>
                     <li class="nav-item"><a class="nav-link" href="#awards">Achievements</a></li>
                     <li class="nav-item"><a class="nav-link" href="#publications">Publications</a></li>
                     
@@ -580,6 +581,118 @@
         </div>
     </div>
 </section>
+
+<!-- Badges Section -->
+<section id="badges" class="badges-section py-5">
+    <div class="container">
+        <h2 class="section-title">Certifications & Badges</h2>
+        
+        <div class="badges-container">
+            <!-- ICT Master's Degree -->
+            <div class="badge-card fade-in">
+                <div class="badge-image">
+                    <img src="assets/images/badges/assertion-GP-GLmhFQgCzhqysvzWNqA.png" alt="International Master's Degree in ICT For Internet and Multimedia">
+                </div>
+                <div class="badge-content">
+                    <h3>International Master's Degree in ICT For Internet and Multimedia </h3>
+                    <p class="badge-issuer">
+                        <i class="fas fa-certificate"></i> University Of Padova
+                    </p>
+                    <p class="badge-date">
+                        <i class="fas fa-calendar-alt"></i> Feburary 2025
+                    </p>
+                    <div class="badge-description">
+                        <p>The holder or holder of this Badge has obtained an international Master's Degree in ICT For Internet and Multimedia from the University of Padua.
+                        </p>
+                    </div>
+                    <div class="badge-skills">
+                        <span class="skill-badge">Master's Degree</span>
+                        <span class="skill-badge">ICT</span>
+                        <span class="skill-badge">Internet</span>
+                        <span class="skill-badge">Multimedia</span>
+                    </div>
+                </div>
+                <div class="badge-actions">
+                    <a href="https://bestr.it/award/show/GP-GLmhFQgCzhqysvzWNqA" target="_blank" class="btn btn-outline-primary btn-sm">
+                        <i class="fas fa-external-link-alt"></i> Verify
+                    </a>
+                </div>
+            </div>
+
+            <!-- English B2 -->
+            <div class="badge-card fade-in">
+                <div class="badge-image">
+                    <img src="assets/images/badges/assertion-cVPh0vPmQbOEZz7yLhdxtQ.png" alt="English B2 - Speaking">
+                </div>
+                <div class="badge-content">
+                    <h3>English B2 - Speaking</h3>
+                    <p class="badge-issuer">
+                        <i class="fas fa-certificate"></i> University Of Padova
+                    </p>
+                    <p class="badge-date">
+                        <i class="fas fa-calendar-alt"></i> January 2024
+                    </p>
+                    <div class="badge-description">
+                        <p>The Badge Linguistic suitability for CLA - English B2 - Speaking certifies the achievement of a level equivalent to B2 for this skill for the English language compared to the level expected by QCER (Common European Framework of Reference) or CEFR (Common European Framework of Reference for languages), the European system that defines the standard of language skills.</p>
+                    </div>
+                    <div class="badge-skills">
+                        <span class="skill-badge">Linguistic suitability</span>
+                        <span class="skill-badge">Linguistic attestation</span>
+                        <span class="skill-badge">English language</span>
+                        <span class="skill-badge">Foreign language</span>
+                    </div>
+                </div>
+                <div class="badge-actions">
+                    <a href="https://bestr.it/award/show/cVPh0vPmQbOEZz7yLhdxtQ" target="_blank" class="btn btn-outline-primary btn-sm">
+                        <i class="fas fa-external-link-alt"></i> Verify
+                    </a>
+                </div>
+            </div>
+
+            <!-- AWS Cloud Practitioner -->
+            <div class="badge-card fade-in">
+                <div class="badge-image">
+                    <img src="assets/images/badges/AWS-Certified-Cloud-Practitioner_badge.png" alt="AWS Certified Cloud Practitioner">
+                </div>
+                <div class="badge-content">
+                    <h3>AWS Certified Cloud Practitioner</h3>
+                    <p class="badge-issuer">
+                        <i class="fas fa-certificate"></i> Amazon Web Services
+                    </p>
+                    <p class="badge-date">
+                        <i class="fas fa-calendar-alt"></i> March 2025
+                    </p>
+                    <p class="badge-expires">
+                        <i class="fas fa-clock"></i> Expires: March 2026
+                    </p>
+                    <div class="badge-description">
+                        <p>Validates foundational understanding of AWS Cloud, services, security, architecture, pricing, and support.</p>
+                    </div>
+                    <div class="badge-skills">
+                        <span class="skill-badge">Cloud Computing</span>
+                        <span class="skill-badge">AWS Services</span>
+                        <span class="skill-badge">Cloud Architecture</span>
+                        <span class="skill-badge">Cloud Security</span>
+                    </div>
+                </div>
+                <div class="badge-actions">
+                    <a href="" target="_blank" class="btn btn-outline-primary btn-sm">
+                        <i class="fas fa-external-link-alt"></i> Verify
+                    </a>
+                </div>
+            </div>
+
+            <!-- Placeholder for additional badges -->
+            <div class="badge-card add-badge fade-in">
+                <div class="add-badge-content">
+                    <i class="fas fa-plus-circle"></i>
+                    <p>More certifications coming soon!</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 <!-- Awards Section -->
 <section id="awards" class="py-5 bg-light fade-in">
     <div class="container">
