Add Two publications

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 </div>
                 <div class="col-md-3 col-sm-6 mb-4">
                     <div class="stat-card">
-                        <h3 class="stat-number" data-value="1">1</h3>
+                        <h3 class="stat-number" data-value="3">3</h3>
                         <p>Publications</p>
                     </div>
                 </div>
@@ -649,39 +649,6 @@
                 </div>
             </div>
 
-            <!-- AWS Cloud Practitioner -->
-            <div class="badge-card fade-in">
-                <div class="badge-image">
-                    <img src="assets/images/badges/AWS-Certified-Cloud-Practitioner_badge.png" alt="AWS Certified Cloud Practitioner">
-                </div>
-                <div class="badge-content">
-                    <h3>AWS Certified Cloud Practitioner</h3>
-                    <p class="badge-issuer">
-                        <i class="fas fa-certificate"></i> Amazon Web Services
-                    </p>
-                    <p class="badge-date">
-                        <i class="fas fa-calendar-alt"></i> March 2025
-                    </p>
-                    <p class="badge-expires">
-                        <i class="fas fa-clock"></i> Expires: March 2026
-                    </p>
-                    <div class="badge-description">
-                        <p>Validates foundational understanding of AWS Cloud, services, security, architecture, pricing, and support.</p>
-                    </div>
-                    <div class="badge-skills">
-                        <span class="skill-badge">Cloud Computing</span>
-                        <span class="skill-badge">AWS Services</span>
-                        <span class="skill-badge">Cloud Architecture</span>
-                        <span class="skill-badge">Cloud Security</span>
-                    </div>
-                </div>
-                <div class="badge-actions">
-                    <a href="" target="_blank" class="btn btn-outline-primary btn-sm">
-                        <i class="fas fa-external-link-alt"></i> Verify
-                    </a>
-                </div>
-            </div>
-
             <!-- Placeholder for additional badges -->
             <div class="badge-card add-badge fade-in">
                 <div class="add-badge-content">
@@ -992,11 +959,104 @@
                 </div>
             </div>
 
-            <!-- Add more publications here as they become available -->
+            <!-- Automated Semiconductor Test Data Analysis Paper -->
+            <div class="publication-card">
+                <div class="publication-header">
+                    <h3>Automated Semiconductor Test Data Analysis Using a Hybrid Deep Learning Pipeline</h3>
+                    <div class="publication-status">Accepted</div>
+                </div>
+                <div class="publication-body">
+                    <div class="publication-info">
+                        <div class="authors">
+                            <i class="fas fa-users"></i>
+                            Salim Benhamadi, Massimo Pierobon, Giorgia Cassetta, Sabrina Santirosi
+                        </div>
+                        <hr>
+                        <div class="publication-venue">
+                            <i class="fas fa-book"></i>
+                            5th European Automotive Reliability, Test and Safety Workshop (eARTS), 2025
+                        </div>
+                        <div class="publication-date">
+                            <i class="fas fa-calendar"></i>
+                            May 29-30, 2025
+                        </div>
+                    </div>
+                    <div class="publication-abstract">
+                        <p>
+                            Manual analysis of test data plots in semiconductor manufacturing creates a significant bottleneck in production optimization, with product engineers dedicating extensive hours to reviewing patterns, anomalies, and making assessments. This study presents an automated approach based on computer vision and machine learning to streamline this process. We developed a multi-stage pipeline that detects and extracts plots from various document formats using Faster R-CNN, generates feature embeddings via Vision Transformer (ViT-B/32), and employs Affinity Propagation clustering alongside Isolation Forest for anomaly detection.
+                        </p>
+                    </div>
+                    <div class="publication-footer">
+                        <div class="publication-tags">
+                            <span class="skill-badge">Semiconductor Testing</span>
+                            <span class="skill-badge">Deep Learning</span>
+                            <span class="skill-badge">Computer Vision</span>
+                            <span class="skill-badge">Anomaly Detection</span>
+                            <span class="skill-badge">Machine Learning</span>
+                        </div>
+                        <div class="publication-links">
+                            <!-- Placeholder links that will be updated once available -->
+                            <a href="#" class="btn btn-outline-secondary btn-sm disabled">
+                                <i class="fas fa-file-pdf"></i> PDF (Coming Soon)
+                            </a>
+                            <a href="#" class="btn btn-outline-secondary btn-sm disabled">
+                                <i class="fas fa-code"></i> Code (Coming Soon)
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Optimization of Test Insertions Paper -->
+            <div class="publication-card">
+                <div class="publication-header">
+                    <h3>Optimization of Test Insertions in Semiconductor Manufacturing Using Reinforcement Learning</h3>
+                    <div class="publication-status">Accepted</div>
+                </div>
+                <div class="publication-body">
+                    <div class="publication-info">
+                        <div class="authors">
+                            <i class="fas fa-users"></i>
+                            Salim Benhamadi, Alin Alexandru Caluseriu, Giorgia Cassetta, Marco D'Acunzo, Marius Sorin Neagoe
+                        </div>
+                        <hr>
+                        <div class="publication-venue">
+                            <i class="fas fa-book"></i>
+                            5th European Automotive Reliability, Test and Safety Workshop (eARTS), 2025
+                        </div>
+                        <div class="publication-date">
+                            <i class="fas fa-calendar"></i>
+                            May 29-30, 2025
+                        </div>
+                    </div>
+                    <div class="publication-abstract">
+                        <p>
+                            In semiconductor manufacturing, test insertion reduction—the strategic elimination of one or more temperature-based test insertions—offers significant cost and time savings, but requires carefully optimizing test limits to maintain quality control. This paper addresses the challenge of test insertion reduction through advanced limit optimization techniques that balance multiple competing objectives: maximizing failure detection while minimizing false rejections and maintaining process capability. We propose a reinforcement learning (RL) based approach for automatically optimizing test limits to enable effective test insertion reduction.
+                        </p>
+                    </div>
+                    <div class="publication-footer">
+                        <div class="publication-tags">
+                            <span class="skill-badge">Reinforcement Learning</span>
+                            <span class="skill-badge">Semiconductor Testing</span>
+                            <span class="skill-badge">Optimization</span>
+                            <span class="skill-badge">Quality Control</span>
+                            <span class="skill-badge">Multi-objective Optimization</span>
+                        </div>
+                        <div class="publication-links">
+                            <!-- Placeholder links that will be updated once available -->
+                            <a href="#" class="btn btn-outline-secondary btn-sm disabled">
+                                <i class="fas fa-file-pdf"></i> PDF (Coming Soon)
+                            </a>
+                            <a href="#" class="btn btn-outline-secondary btn-sm disabled">
+                                <i class="fas fa-code"></i> Code (Coming Soon)
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </section>
-
     <!-- Footer -->
     <footer class="footer text-white py-4">
         <div class="container text-center">
