Add JavaScript as a skill

--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
                     </div>
                     <div class="skill-body">
                         <div class="proficiency-level proficient">
-                            Python (Advanced)
+                            Python, JavaScript
                         </div>
                         <div class="proficiency-level familiar">
                             C/C++, SQL
