--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="row mt-5 text-center">
                 <div class="col-md-3 col-sm-6 mb-4">
                     <div class="stat-card">
-                        <h3 class="stat-number" data-value="41">41</h3>
+                        <h3 class="stat-number" data-value="70">70</h3>
                         <p>Leetcode Solved</p>
                     </div>
                 </div>
@@ -136,15 +136,39 @@
         
         <!-- Timeline -->
         <div class="timeline">
+            <!-- Saturnalia -->
+            <div class="experience-item fade-in">
+                <div class="d-flex justify-content-between align-items-center">
+                    <h4 class="mb-1">Machine Learning Engineer - Research & Development</h4>
+                    <span class="badge bg-primary">Present</span>
+                </div>
+                <h5 class="text-primary mb-2">Saturnalia</h5>
+                <p class="text-muted mb-2">
+                    <i class="fas fa-calendar-alt me-2"></i>June 2025 - Present
+                    <i class="fas fa-map-marker-alt ms-3 me-2"></i>Pavia, Italy
+                </p>
+                <ul class="list-unstyled">
+                    <li class="mb-2">
+                        <i class="fas fa-check-circle text-primary me-2"></i>
+                        Conducted research on crop damage detection using satellite imagery data to develop automated agricultural monitoring solutions
+                    </li>
+                </ul>
+                <div class="mt-3">
+                    <span class="skill-badge">Computer Vision</span>
+                    <span class="skill-badge">Remote Sensing</span>
+                    <span class="skill-badge">Geospatial Analysis</span>
+                    <span class="skill-badge">Crop Health Assessment</span>
+                </div>
+            </div>
+
             <!-- Infineon Technologies -->
             <div class="experience-item fade-in">
                 <div class="d-flex justify-content-between align-items-center">
                     <h4 class="mb-1">Machine Learning Intern</h4>
-                    <span class="badge bg-primary">Present</span>
                 </div>
                 <h5 class="text-primary mb-2">Infineon Technologies</h5>
                 <p class="text-muted mb-2">
-                    <i class="fas fa-calendar-alt me-2"></i>March 2024 - Present
+                    <i class="fas fa-calendar-alt me-2"></i>March 2024 - June 2025
                     <i class="fas fa-map-marker-alt ms-3 me-2"></i>Padova, Italy
                 </p>
                 <ul class="list-unstyled">
@@ -666,6 +690,66 @@
         <h2 class="section-title">Awards & Achievements</h2>
 
         <div class="row g-4">
+            <!-- Fastweb Hackathon -->
+            <div class="col-lg-4 col-md-6">
+                <div class="award-card">
+                    <div class="award-ribbon silver">
+                        <span>Award</span>
+                    </div>
+                    <div class="award-content">
+                        <div class="award-icon">
+                            <i class="fas fa-brain"></i>
+                        </div>
+                        <h3>FastwebAI Hackathon</h3>
+                        <p class="award-details">
+                            <i class="fas fa-medal"></i> Best Inclusion Project
+                            <br>
+                            <i class="fas fa-calendar"></i> September 11-12, 2025
+                        </p>
+                        <p class="award-org">Fastweb</p>
+                        <div class="award-description">
+                            <p>Created EmotiSense AI, a supportive platform for neurodivergent individuals to develop emotional awareness through AI-powered insights.</p>
+                        </div>
+                        <div class="award-tags mt-3">
+                            <span class="skill-badge">Emotional AI</span>
+                            <span class="skill-badge">Neurodiversity</span>
+                            <span class="skill-badge">Accessibility</span>
+                            <span class="skill-badge">Natural Language Processing</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- AI Meets Medicine Hackathon -->
+            <div class="col-lg-4 col-md-6">
+                <div class="award-card">
+                    <div class="award-ribbon silver">
+                        <span>2nd Place</span>
+                    </div>
+                    <div class="award-content">
+                        <div class="award-icon">
+                            <i class="fas fa-stethoscope"></i>
+                        </div>
+                        <h3>AI Meets Medicine: Collaborative Solutions for Healthcare</h3>
+                        <p class="award-details">
+                            <i class="fas fa-medal"></i> Second Prize
+                            <br>
+                            <i class="fas fa-calendar"></i> September 3-4, 2025
+                        </p>
+                        <p class="award-org">Elty di DaVinci Salute & Google Cloud</p>
+                        <div class="award-description">
+                            <p>Developed AI-accessible hearing health solutions for early detection of hearing loss.</p>
+                        </div>
+                        <div class="award-tags mt-3">
+                            <span class="skill-badge">Healthcare AI</span>
+                            <span class="skill-badge">Hearing Loss Detection</span>
+                            <span class="skill-badge">Accessibility</span>
+                            <span class="skill-badge">Medical Technology</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <!-- AirQo Challenge -->
             <div class="col-lg-4 col-md-6">
                 <div class="award-card">
