feat: Add Latest Updates section to homepage

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
         <i class="fas fa-bars"></i>
     </div>
 
-
     <aside class="sidebar" id="sidebar">
         <div class="profile">
             <div class="profile-img-wrapper">
@@ -72,6 +71,7 @@
     </aside>
 
     <main class="main-content">
+        <!-- Hero Section -->
         <div class="intro-section">
             <div class="greeting">
                 <span class="wave">👋</span>
@@ -81,6 +81,7 @@
             <p class="tagline">Transforming complex data into actionable insights through advanced AI solutions</p>
         </div>
 
+        <!-- About Section -->
         <div class="about-content">
             <div class="about-card">
                 <div class="about-icon">
@@ -106,8 +107,88 @@
                 <p>I believe in continuous learning and staying at the forefront of AI innovation. My approach combines rigorous statistical analysis with creative problem-solving to deliver impactful solutions that make a real difference.</p>
             </div>
         </div>
+
+<!-- News/Updates Section -->
+<div class="news-section">
+    <h2 class="section-title">📰 Latest Updates</h2>
+    <div class="news-list">
+        <div class="news-item">
+            <div class="news-date">June 2025</div>
+            <div class="news-content">
+                <div class="news-header">
+                    <h3 class="news-title">Started New Role at Saturnalia</h3>
+                    <span class="news-badge featured">Featured</span>
+                </div>
+                <p class="news-description">
+                    Joined Saturnalia as a Machine Learning Engineer in R&D, focusing on crop damage detection using satellite imagery and developing automated agricultural monitoring solutions.
+                </p>
+            </div>
+            <div class="news-actions">
+                <a href="pages/experience.html" class="news-link">
+                    Learn More <i class="fas fa-arrow-right"></i>
+                </a>
+            </div>
+        </div>
+
+        <div class="news-item">
+            <div class="news-date">September 2025</div>
+            <div class="news-content">
+                <div class="news-header">
+                    <h3 class="news-title">Best Inclusion Project - FastwebAI Hackathon</h3>
+                    <span class="news-badge">Award</span>
+                </div>
+                <p class="news-description">
+                    Won Best Inclusion Project award for EmotiSense AI, a supportive platform for neurodivergent individuals to develop emotional awareness through AI-powered insights.
+                </p>
+            </div>
+            <div class="news-actions">
+                <a href="pages/awards.html" class="news-link">
+                    View Award <i class="fas fa-arrow-right"></i>
+                </a>
+            </div>
+        </div>
+
+        <div class="news-item">
+            <div class="news-date">February 2025</div>
+            <div class="news-content">
+                <div class="news-header">
+                    <h3 class="news-title">Completed Master's Degree</h3>
+                    <span class="news-badge">Achievement</span>
+                </div>
+                <p class="news-description">
+                    Successfully completed Master's Degree in ICT for Internet and Multimedia Engineering from University of Padova, specializing in Computer Vision and NLP.
+                </p>
+            </div>
+            <div class="news-actions">
+                <a href="pages/education.html" class="news-link">
+                    View Education <i class="fas fa-arrow-right"></i>
+                </a>
+            </div>
+        </div>
+
+        <div class="news-item">
+            <div class="news-date">September 2025</div>
+            <div class="news-content">
+                <div class="news-header">
+                    <h3 class="news-title">Second Prize - AI Meets Medicine Hackathon</h3>
+                    <span class="news-badge">Award</span>
+                </div>
+                <p class="news-description">
+                    Developed AI-accessible hearing health solutions for early detection of hearing loss at the healthcare hackathon organized by Elty di DaVinci Salute & Google Cloud.
+                </p>
+            </div>
+            <div class="news-actions">
+                <a href="pages/awards.html" class="news-link">
+                    View Award <i class="fas fa-arrow-right"></i>
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
+
+        <!-- Research/Work Interests Section -->
         <div class="interests-section">
-            <h2 class="section-title">Research/Work Interests</h2>
+            <h2 class="section-title">🔬 Research & Work Interests</h2>
             <div class="interests-grid">
                 <div class="interest-card">
                     <i class="fas fa-eye"></i>
@@ -132,9 +213,10 @@
             </div>
         </div>
 
+        <!-- CTA Section -->
         <div class="cta-section">
-            <h2 style="color : white">Let's Work Together</h2>
-            <p style="color : white">I'm always interested in hearing about new opportunities and collaborations.</p>
+            <h2 style="color: white">Let's Work Together</h2>
+            <p style="color: white">I'm always interested in hearing about new opportunities and collaborations.</p>
             <div class="cta-buttons">
                 <a href="mailto:salim.benhamadi@studenti.unipd.it" class="cta-btn primary">
                     <i class="fas fa-envelope"></i> Get In Touch
