fix: hide sidebar text in collapsed state across all pages

--- a/pages/badges.html
+++ b/pages/badges.html
@@ -14,34 +14,63 @@
 
 
     <aside class="sidebar" id="sidebar">
-        <div class="profile">
+    <div class="profile">
+        <div class="profile-img-wrapper">
             <img src="../assets/images/profile.jpg" alt="Salim Benhamadi" class="profile-img">
-            <h1>Salim Benhamadi</h1>
-            <p>Machine Learning Engineer</p>
-            
-            <div class="social-links">
-                <a href="https://github.com/salim-benhamadi" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="https://linkedin.com/in/salimbenhamadi/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="mailto:salim.benhamadi@studenti.unipd.it"><i class="fas fa-envelope"></i></a>
-                <a href="https://kaggle.com/salimhammadi07" target="_blank"><i class="fab fa-kaggle"></i></a>
-                <a href="https://leetcode.com/u/salim-benhamadi/" target="_blank"><i class="fas fa-laptop-code"></i></a>
-            </div>
+            <div class="gradient-ring"></div>
+            <div class="status-indicator"></div>
         </div>
+        <h1>Salim Benhamadi</h1>
+        <p class="profile-role">Machine Learning Engineer</p>
+        <p class="profile-location"><i class="fas fa-map-marker-alt"></i> Milan, Italy</p>
+        
+        <div class="social-links">
+            <a href="https://github.com/salim-benhamadi" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+            <a href="https://linkedin.com/in/salimbenhamadi/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+            <a href="mailto:salim.benhamadi@studenti.unipd.it" title="Email"><i class="fas fa-envelope"></i></a>
+            <a href="https://kaggle.com/salimhammadi07" target="_blank" title="Kaggle"><i class="fab fa-kaggle"></i></a>
+            <a href="https://leetcode.com/u/salim-benhamadi/" target="_blank" title="LeetCode"><i class="fas fa-laptop-code"></i></a>
+        </div>
+    </div>
 
-        <nav class="nav-menu">
-            <a href="../index.html" class="nav-link"><i class="fas fa-user"></i> About</a>
-            <a href="experience.html" class="nav-link"><i class="fas fa-briefcase"></i> Experience</a>
-            <a href="education.html" class="nav-link"><i class="fas fa-graduation-cap"></i> Education</a>
-            <a href="skills.html" class="nav-link"><i class="fas fa-code"></i> Skills</a>
-            <a href="badges.html" class="nav-link active"><i class="fas fa-certificate"></i> Badges</a>
-            <a href="awards.html" class="nav-link"><i class="fas fa-trophy"></i> Awards</a>
-            <a href="publications.html" class="nav-link"><i class="fas fa-book"></i> Publications</a>
-        </nav>
-
-        <a href="../assets/resume.pdf" download class="download-btn">
-            <i class="fas fa-download"></i> Download Resume
+    <nav class="nav-menu">
+        <a href="../index.html" class="nav-link">
+            <i class="fas fa-user"></i> 
+            <span>About Me</span>
         </a>
-    </aside>
+        <a href="experience.html" class="nav-link active">
+            <i class="fas fa-briefcase"></i> 
+            <span>Experience</span>
+        </a>
+        <a href="education.html" class="nav-link">
+            <i class="fas fa-graduation-cap"></i> 
+            <span>Education</span>
+        </a>
+        <a href="skills.html" class="nav-link">
+            <i class="fas fa-code"></i> 
+            <span>Skills</span>
+        </a>
+        <a href="badges.html" class="nav-link">
+            <i class="fas fa-certificate"></i> 
+            <span>Badges</span>
+        </a>
+        <a href="awards.html" class="nav-link">
+            <i class="fas fa-trophy"></i> 
+            <span>Awards</span>
+        </a>
+        <a href="publications.html" class="nav-link">
+            <i class="fas fa-book"></i> 
+            <span>Publications</span>
+        </a>
+    </nav>
+
+    <div class="sidebar-footer">
+        <a href="../assets/resume.pdf" download class="download-btn">
+            <i class="fas fa-download"></i>
+            <span>Download CV</span>
+        </a>
+    </div>
+</aside>
 
     <main class="main-content">
         <h2 class="section-title">🎖️ Certifications & Badges</h2>
